# semantiva-audio

./: README.md  ci_pipeline.sh  pyproject.toml
.github/workflows/: ci-pipeline.yaml
semantiva_audio/: __init__.py  audio_data_io.py  audio_data_types.py  audio_operations.py
semantiva_audio/data_io/: io.py
semantiva_audio/data_types/: __init__.py
semantiva_audio/processing/: operations.py  processors.py
tests/: test_audio_algorithm.py  test_audio_operation.py  test_audio_pipeline.py  test_audio_specialization_loader.py
